[DSTEW-2083] - Add pagination to history endpoint
